update caps & delete dropbox

--- a/imprint.html
+++ b/imprint.html
@@ -15,7 +15,7 @@
             <a href="#" title="Hide navigation">Hide navigation</a>
             <ul>
                 <li class="navigation">
-                    <a href="index.html"><img src="images/Logo-1.png" width="auto" height="25px" alt="" </a>
+                    <a href="index.html"><img src="images/logo-1.png" width="auto" height="25px" alt="" </a>
                 </li>
                 <li class="navigation"><a href="about.html">about</a>
                 </li>
