finished some todo, images, CV

--- a/about.html
+++ b/about.html
@@ -6,8 +6,10 @@
         @import url("style.css");
      </style>
      
-	
+     <link rel="shortcut icon" type="image/png" href="images/favicon.png"/>
 </head>
+
+
 
 <body>
 
@@ -16,7 +18,7 @@
             <a href="#" title="Hide navigation">Hide navigation</a>
             <ul>
                 <li class="navigation">
-                    <a href="index.html"><img src="images/logo-1.png" width="auto" height="25px" alt="" </a>
+                    <a href="index.html"><img src="images/kna-logo.svg" width="auto" height="25px" alt=""> </a>
                 </li>
                 <li class="navigation"><a href="about.html">about</a>
                 </li>
@@ -46,8 +48,8 @@
   Monika Zylka, 27y, German-Polish
   
   <ul>
-  <li> Computer Visualistics Student (B. Sc.), finishing in 2019 </li>
-  <li> Prospecting to study Web and Data Science in Masters (M. Sc.) </li>
+  <li> Computer Visualistics Student (B. Sc.), finishing 2019 </li>
+  <li> Prospecting to study Web and Data Science in Masters (M. Sc.) in Winter 2019</li>
   <li> Working student in a startup, responsible for analysis, the webpage and SEO </li>
   <li> Already had a full-time job in Marketing ans Sales for several years </li>
   <li> Moved to Germany in September 2001 </li>
@@ -55,15 +57,29 @@
   </ul>
   
   <p> I discovered in my recent sales / marketing job, that I really thrive working on projects where I create a product, a website or craft somehing. <br>
-  This is why I decided to study some course in Computer Science, a field where one has the option be very creative afterwards <br>
+  This is why I decided to study some course in Computer Science, a field where one has the option be very creative afterwards <br> 
+  <br>
+
+  Here are current versions of my CV<br>
+  </p>
+  <a href="docs/de_lebenslauf_zmf_monika_zylka.jpg" download>
+    <img src="images/cv.svg" alt="monikacv" width="50px" height="70px"><br> German Summary
+  </a>
+  <br>
+  <a href="docs/cv_monika_zylka.pdf" download>
+    <img src="images/cv.svg" alt="monikacv" width="50px" height="70px"><br> English Complete
+  </a>
+<br>
+<br>
+  
 
   
   
   <h2> Current Projects </h2>
   <ol>
-   <li>Voting Project </li>
-   <li>This Website </li>
-    <li>Improving my Time Management skills</li>
+   <li><a href="voting.html">Voting Project </a></li>
+   <li><a href="website.html">This Website</a> </li>
+    <li><a href="time.html">Improving my Time Management skills</a> </li>
    <li>Finding a new Flat in Koblenz, Germany</li>
   </ol>
   
@@ -77,6 +93,9 @@
    <h2> Skills</h2>
   <ul>
    <li>HTML & CSS </li>
+   <li>Java </li>
+   <li>C++ </li>
+   <li>Prolog </li>
    <li>JavaScript </li>
    <li>DAX - Data Analysis Expressions</li>
   </ul>
@@ -92,9 +111,156 @@
   </ul>
   
   <h2> My Path </h2>
-  	<h3>Education </h3>
-  	<h3>Work Experience </h3>
-  	<h3>Other Experiences </h3>
+    <h3>Education </h3>
+    <h4>Computer Visualistics (B. Sc.)</h4>
+    <b>10/2015 – now<br>
+      University of Koblenz-Landau<br>
+    </b>
+    Koblenz, Germany<br>
+    Tasks: <br>
+    <ul>
+      <li>
+        <span class="edu-coursework-title">Programming: </span>
+        C++, Java, PHP, JavaScript, Prolog, Python, HTML
+    </li>
+    <li>
+        <span class="edu-coursework-title">Business: </span>
+        Marketing, Project Management
+    </li>
+    <li>
+        <span class="edu-coursework-title">Project Lab: </span>
+        Semantic Process Modelling; Java and Natural Language Processing
+    </li>
+    <li>
+         <span class="edu-coursework-title">Computer Visualistics: </span>
+        Computergraphics, Image Processing, Software Ergonomics, HCI
+    </li>
+    <li>
+        <span class="edu-coursework-title">Others: </span>
+        Internet of Things, Artificial Intelligence, IT-security, Statistics (in HCI class)
+    </li>
+    </ul>
+    <p>2015 &ndash; 2019 (expected) <br>Expecting grade of 2.3</p>
+    <br>
+    <br>
+
+    <h4>Apprenticeship in wholesale and foreign trade</h4>
+    <b>09/2014 – 06/2012<br>
+      Freihof Gymnasium Göppinge<br>
+    </b>
+    Koblenz, Germany<br>
+    Tasks: <br>
+    <ul>
+    <li>
+      Advanced Level Subjects: German, Englisch, Mathematics, Chemistry, Ethics (BW has 5 ALS)
+    </li>
+    </ul>
+    <p>Overall Grade: 1.8</p>
+    <br>
+    <br>
+
+    <h4>Abitur</h4>
+    <b>09/2013 – 06/2015<br>
+      Kaufmännische Berufschule Göppingen<br>
+    </b>
+    Koblenz, Germany<br>
+    Tasks: <br>
+    <ul>
+    <li>
+      Marketing, Business, Business English
+    </li>
+    </ul>
+    <p>Overall Grade: 1.4</p>
+    <br>
+    <br>
+
+    <h3>Work Experience </h3>
+    <h4>Working Stundent</h4>
+    <b>05/2018 – now<br>
+      Amicido GmbH<br>
+    </b>
+    56414, Montabaur<br>
+    Tasks: <br>
+    <ul>
+      <li>Analytics of website, social media channels as well as advertisements</li>
+                        <li>Developing custom Wordpress pages for member areas</li>
+                        <li>Implementing own tool in Wordpress through the access of other plugin</li>
+                        <li>SEO for our website</li>
+                        <li>Analytics of our Website</li>
+                        <li>Co-designed the website and coded HTML and CSS markups</li>
+                        <li>Researched, analysed and presentated different tools for purchase decisions</li>
+                        <li>Setup Jira and Confluence Structure for workflow, projects and tasks</li>
+                        <li>Taught new employees</li>
+                        <li>Created different infographics for our website and our product in Illustrator</li>
+                        <li>Became content lead for in-house agile projects: website, SEO, Analytics and online marketing </li>
+    </ul>
+    Working with:: <br>
+    PHP, Git, JavaScript, WordPress, Google Analytics, Confluence, Jira, BPML, HTML, Photoshop, Illustrator, Piwik, MS Power BI
+    <br>
+    <br>
+    <h4>Assistant in Marketing</h4>
+    <b>07/2015 – 09/2015<br>
+      COMM-TEC GmbH<br>
+    </b>
+    73066, Uhingen<br>
+    Tasks: <br>
+    <ul>
+      <li>Translations for website</li>
+      <li>Fixing front end website bugs</li>
+      <li>Organized, planned and executed on events such as seminars to improve business relationships and achieve business goals</li>
+      <li>Responsible for printed and digital marketing material</li>
+      <li>Management of business success stories</li>
+    </ul>
+    Working with: <br>
+    HTML, CSS, Photoshop, InDesign
+    <br>
+    <br>
+    <h4>Apprenticeship in wholesale and foreign trade</h4>
+    <b>09/2013 – 06/2015<br>
+      COMM-TEC GmbH<br>
+    </b>
+    73066, Uhingen<br>
+    Tasks: <br>
+    <ul>
+      <li>International Sales</li>
+                        <li>Customer Relationship Management</li>
+                        <li>Warehouse Management</li>
+                        <li>Specialization in International Shipping</li>
+                        <li>Procurement</li>
+                        <li>Marketing</li>
+    </ul>
+    <br>
+
+
+    <h3>Other Experiences </h3>
+    <h4>Voluntary Social Year</h4>
+    <b>09/2013 – 06/2015<br>
+      Christophsbad Göppingen, Psychiatry department<br>
+    </b>
+    73033, Göppingen<br>
+    Tasks: <br>
+    <ul>
+      <li>Managed appointment schedules of patients</li>
+      <li>Helped patients throughout the day, esp. in mornings and evenings</li>
+      <li>Worked under stressful situations during periods of under staffing</li>
+    </ul>
+    <br>
+
+    <h4>2 weeks internship</h4>
+    <b>07/2014<br>
+      CTP Boguslaw Klodzinski<br>
+    </b>
+    55-080 Kąty Wrocławskie, Poland<br>
+    Tasks: <br>
+    <ul>
+      <li>Handle sales offers in a different language</li>
+      <li>Manage other employees schedule</li>
+      <li>Responsible for logistics</li>
+      <li>Setup CRM for several customers</li>
+    </ul>
+    <br>
+
+
   </ol>
   
     <h2> My Freetime </h2>
