--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function showSlides(n) {
             <a href="#" title="Hide navigation">Hide navigation</a>
             <ul style="margin-bottom: 0px;">
                 <li class="navigation">
-                    <a href="index.html"><img src="images/logo-1-hover.png" width="auto" height="25px" alt="" </a>
+                    <a href="index.html"><img src="images/kna-logo.svg" width="auto" height="25px" alt=""> </a>
                 </li>
                 <li class="navigation"><a href="about.html">about</a>
                 </li>
