--- a/sources.html
+++ b/sources.html
@@ -16,7 +16,7 @@
             <a href="#" title="Hide navigation">Hide navigation</a>
             <ul>
                 <li class="navigation">
-                    <a href="index.html"><img src="images/logo-1.png" width="auto" height="25px" alt="" </a>
+                    <a href="index.html"><img src="images/kna-logo.svg" width="auto" height="25px" alt=""> </a>
                 </li>
                 <li class="navigation"><a href="about.html">about</a>
                 </li>
@@ -55,6 +55,9 @@
    
     <h2> Literature I want to read </h2>
    <ul>
+        <li><a href="https://www.koblenz.de/downloads/aemter-und-eigenbetriebe/statistikstelle/wahlen/2019-kommunalwahl-koblenz.pdf?cid=v0p">Ergebnisse der Kommunawahlen
+            am 26. Mai 2019 in Koblenz</a> by Statistischer
+            Auskunftsdienst of the city Koblenz, retrieved on the 23rd July 2019</li>
    <li>... </li>
    	
    </ul>
