--- a/voting.html
+++ b/voting.html
@@ -16,7 +16,7 @@
             <a href="#" title="Hide navigation">Hide navigation</a>
             <ul>
                 <li class="navigation">
-                    <a href="index.html"><img src="images/logo-1.png" width="auto" height="25px" alt="" </a>
+                    <a href="index.html"><img src="images/kna-logo.svg" width="auto" height="25px" alt=""> </a>
                 </li>
                 <li class="navigation"><a href="about.html">about</a>
                 </li>
@@ -50,7 +50,14 @@
    		<li> <a href="sources.html">References</a></li>
    </ul>
    
-    <h2> Current Tasks </h2>
+    <h2> Coning Tasks </h2>
+   <ul>
+   	<li> Write email to the assistant </li>
+   	<li> Add the "cart" function</li>   	
+   </ul>
+
+
+   <h2>Tasks </h2>
    <ul>
    	<li> Format the Excel Table nicely </li>
    	<li> Add the List of Candidates </li>
