--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,7 @@
             <a href="#" title="Hide navigation">Hide navigation</a>
             <ul>
                 <li class="navigation">
-                    <a href="index.html"><img src="images/logo-1.png" width="auto" height="25px" alt="" </a>
+                    <a href="index.html"><img src="images/kna-logo.svg" width="auto" height="25px" alt=""> </a>
                 </li>
                 <li class="navigation"><a href="about.html">about</a>
                 </li>
