added time panning pdf

--- a/time.html
+++ b/time.html
@@ -49,6 +49,24 @@
 
    </ul>
      <br>
+
+     <h2>Documents</h2>
+     <p>This is a couple of time management documents I have created, for you available as a Download</p>
+     <h3>Yearly Overviews</h3>
+     <a href="docs/2019calendarOverview.pdf" download>
+        <img src="images/cv.svg" alt="2019atAGlance" width="50px" height="70px"><br> 2019 Overview on a page
+      </a>
+      <h3>Monthly Overviews</h3>
+      <a href="docs/OverviewMonthAug.pdf" download>
+        <img src="images/cv.svg" alt="2019AugustOverview" width="50px" height="70px"><br> August Overview
+      </a><br>
+      <a href="docs/AugustRows.pdf" download>
+        <img src="images/cv.svg" alt="2019AugustRows" width="50px" height="70px"><br> August for planning
+      </a>
+      <h3>Scheduling Templates</h3>
+      <a href="docs/dayPlan.pdf" download>
+        <img src="images/cv.svg" alt="dailyplan" width="50px" height="70px"><br> Daily Plan
+      </a>
  <br>
  <br>
   <br>
