adjustment of CV Amicido part

--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                     <li>Zusammenarbeit mit interdisziplinären Teams, um Cloud-Technologien effektiv einzusetzen</li>
                     <li>PO im Dashboard Projekt im DICE (Übersicht über Projekte für DICE Leitung)</li>
                     <li>Zusammenarbeit mit unterschiedlichen Abteilungen wie dem Vendor Management für die Website</li>
-                    <li>WordPress Admin DICE Website</li>
+                    <li>WordPress Admin der DICE Website</li>
                 </ul>
                 <h4>Business Analyse – <a href="https://dice-debeka.de/">DICE (Debeka Innovation Center)</a></h4>
                 <p>April 2020 – September 2021 | Koblenz & Remote</p>
@@ -158,7 +158,15 @@
                     <li>Entwicklung von Power-BI-Dashboards und Nutzung von Pivot-Tabellen für Forecasting-Daten in der Automobilindustrie.</li>
                     <li>Erstellung und Optimierung von Ablaufdiagrammen zur Unterstützung von Entscheidungsprozessen.</li>
                     <li>Erstellung von Personas, des Webauftritts sowie User Stories</li>
+                    <li>Wordpress Administration des Amicido Webauftritts</li>
                     <li>Durchführung von Markt- und Wettbewerbsanalysen, um passende Tools füe unsere Start-up Bedürfnisse auszusuchen</li>
+                    <li>Analyse von Website-Traffic, Social-Media-Kanälen und Anzeigen zur Unterstützung von Marketingstrategien.</li>
+    <li>Entwicklung von individuellen WordPress-Seiten für Mitgliederbereiche und Implementierung maßgeschneiderter Tools durch die Nutzung von Plugins.</li>
+    <li>Optimierung der Website-SEO zur Verbesserung der Sichtbarkeit und Nutzerbindung.</li>
+    <li>Einrichtung einer Jira- und Confluence-Struktur zur Optimierung von Workflows, Projektmanagement und Aufgabenverfolgung.</li>
+    <li>Schulung neuer Mitarbeiter in technischen Fähigkeiten, einschließlich der Nutzung von Tools und agilen Arbeitsmethoden.</li>
+    <li>Erstellung von Infografiken in Illustrator für die Website und Marketingmaterialien des Produkts.</li>
+    <li>Übernahme der Rolle als Content Lead für interne agile Projekte, mit Fokus auf Website-Entwicklung, SEO, Analytics und Online-Marketing.</li>
                 </ul>
                 <h4>Ausbildung zur Groß- und Außemhandelskauffrau und anschließend Vollzeit - <a href="https://www.exertisproav.de/en-us/allgemein/impressum">COMM-TEC</a></h4>
                 <p>Oktober 2013 – September 2015 | Uhingen, Deutschland</p>
@@ -229,7 +237,7 @@
                     <li>Gewinnerin des Ideenwettbewerbs Koblenz und Empfängerin des EXIST-Women-Stipendiums.</li> 
                     <li>Erstellung eines datenbasierten Modells zur Erweiterung der Plattformfunktionen.</li> 
                     <li>Flexibles Arbeiten in vielseitigen Rollen, von Kundenbetreuerin, zur Datenanalyse bis hin zur Prozessmodellierung etc.</li> 
-                    <li>Development mit ChatGPT</li>    
+                    <li>Development mit Unterstützung von ChatGPT</li>    
                 </ul>
             </div>
         </div>
