--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 
         .sidebar {
             width: 30%;
+            height: 1400px;
             background-color: #f7f7f7;
             /* Light grey color */
             padding: 20px;
@@ -108,8 +109,7 @@
             text-decoration: none;
             color: #333;
         }
-
-        </style>
+    </style>
 </head>
 
 <body>
@@ -124,7 +124,12 @@
         <div class="content">
             <div class="section">
                 <h3>Berufliches Profil</h3>
-                <p style="line-height: 1.6">Unternehmerisch denkende Business Analystin mit Leidenschaft für Start-up-ähnliche Umfelder. Breite Erfahrung in vielseitigen Aufgabenbereichen, die über herkömmliche Rollen hinausgehen, sowie in der Entwicklung von kleinen Tools. Prämiert im Ideenwettbewerb Koblenz und ausgezeichnet mit einem EXIST-Gründerstipendium für die Plattform CandidFind. Stark in Prozessmodellierung (BPMN, Ablaufdiagramme), datenbasierter Entscheidungsunterstützung sowie der Visualisierung von Informationen.</p>
+                <p style="line-height: 1.6">Unternehmerisch denkende Business Analystin mit Leidenschaft für
+                    Start-up-ähnliche Umfelder. Breite Erfahrung in vielseitigen Aufgabenbereichen, die über
+                    herkömmliche Rollen hinausgehen, sowie in der Entwicklung von kleinen Tools. Prämiert im
+                    Ideenwettbewerb Koblenz und ausgezeichnet mit einem EXIST-Gründerstipendium für die Plattform
+                    CandidFind. Stark in Prozessmodellierung (BPMN, Ablaufdiagramme), datenbasierter
+                    Entscheidungsunterstützung sowie der Visualisierung von Informationen.</p>
             </div>
             <div class="section">
                 <h3>Berufliche Erfahrung</h3>
@@ -151,24 +156,36 @@
                     <li>Enge Zusammenarbeit mit Stakeholdern zur Spezifikation und Priorisierung von Anforderungen.</li>
                     <li>Erste 6 Monate als Werkstudentin</li>
                 </ul>
-                <h4>Business Analyse – <a href="https://www.northdata.de/Amicido%20GmbH,%20Montabaur/HRB%2025723">Amicido</a> / <a href="https://vistalution.com/"> SWX </a></h4>
+                <h4>Business Analyse – <a
+                        href="https://www.northdata.de/Amicido%20GmbH,%20Montabaur/HRB%2025723">Amicido</a> / <a
+                        href="https://vistalution.com/"> SWX </a></h4>
                 <p>Juni 2018 – März 2020 | Montabaur, Deutschland</p>
                 <ul>
                     <li>Arbeiten in einem Start-up Umfeld, Fokus auf Datenvisualisierung und Prozessoptimierung</li>
-                    <li>Entwicklung von Power-BI-Dashboards und Nutzung von Pivot-Tabellen für Forecasting-Daten in der Automobilindustrie.</li>
-                    <li>Erstellung und Optimierung von Ablaufdiagrammen zur Unterstützung von Entscheidungsprozessen.</li>
+                    <li>Entwicklung von Power-BI-Dashboards und Nutzung von Pivot-Tabellen für Forecasting-Daten in der
+                        Automobilindustrie.</li>
+                    <li>Erstellung und Optimierung von Ablaufdiagrammen zur Unterstützung von Entscheidungsprozessen.
+                    </li>
                     <li>Erstellung von Personas, des Webauftritts sowie User Stories</li>
                     <li>Wordpress Administration des Amicido Webauftritts</li>
-                    <li>Durchführung von Markt- und Wettbewerbsanalysen, um passende Tools füe unsere Start-up Bedürfnisse auszusuchen</li>
-                    <li>Analyse von Website-Traffic, Social-Media-Kanälen und Anzeigen zur Unterstützung von Marketingstrategien.</li>
-    <li>Entwicklung von individuellen WordPress-Seiten für Mitgliederbereiche und Implementierung maßgeschneiderter Tools durch die Nutzung von Plugins.</li>
-    <li>Optimierung der Website-SEO zur Verbesserung der Sichtbarkeit und Nutzerbindung.</li>
-    <li>Einrichtung einer Jira- und Confluence-Struktur zur Optimierung von Workflows, Projektmanagement und Aufgabenverfolgung.</li>
-    <li>Schulung neuer Mitarbeiter in technischen Fähigkeiten, einschließlich der Nutzung von Tools und agilen Arbeitsmethoden.</li>
-    <li>Erstellung von Infografiken in Illustrator für die Website und Marketingmaterialien des Produkts.</li>
-    <li>Übernahme der Rolle als Content Lead für interne agile Projekte, mit Fokus auf Website-Entwicklung, SEO, Analytics und Online-Marketing.</li>
+                    <li>Durchführung von Markt- und Wettbewerbsanalysen, um passende Tools füe unsere Start-up
+                        Bedürfnisse auszusuchen</li>
+                    <li>Analyse von Website-Traffic, Social-Media-Kanälen und Anzeigen zur Unterstützung von
+                        Marketingstrategien.</li>
+                    <li>Entwicklung von individuellen WordPress-Seiten für Mitgliederbereiche und Implementierung
+                        maßgeschneiderter Tools durch die Nutzung von Plugins.</li>
+                    <li>Optimierung der Website-SEO zur Verbesserung der Sichtbarkeit und Nutzerbindung.</li>
+                    <li>Einrichtung einer Jira- und Confluence-Struktur zur Optimierung von Workflows, Projektmanagement
+                        und Aufgabenverfolgung.</li>
+                    <li>Schulung neuer Mitarbeiter in technischen Fähigkeiten, einschließlich der Nutzung von Tools und
+                        agilen Arbeitsmethoden.</li>
+                    <li>Erstellung von Infografiken in Illustrator für die Website und Marketingmaterialien des
+                        Produkts.</li>
+                    <li>Übernahme der Rolle als Content Lead für interne agile Projekte, mit Fokus auf
+                        Website-Entwicklung, SEO, Analytics und Online-Marketing.</li>
                 </ul>
-                <h4>Ausbildung zur Groß- und Außemhandelskauffrau und anschließend Vollzeit - <a href="https://www.exertisproav.de/en-us/allgemein/impressum">COMM-TEC</a></h4>
+                <h4>Ausbildung zur Groß- und Außemhandelskauffrau und anschließend Vollzeit - <a
+                        href="https://www.exertisproav.de/en-us/allgemein/impressum">COMM-TEC</a></h4>
                 <p>Oktober 2013 – September 2015 | Uhingen, Deutschland</p>
                 <ul>
                     <li>Export Sales Kundenbetreuung</li>
@@ -189,22 +206,26 @@
                 <ul style="list-style: none !important; margin-left: 0px !important;">
                     <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" style="display: inline-block; vertical-align: middle;
                         width: 0.875rem;
-                        height: 0.875rem;"> <path fill-rule="evenodd" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round" stroke-linecap="round"
-                        d="M14.3308 15.9402L15.6608 14.6101C15.8655 14.403 16.1092 14.2384 16.3778 14.1262C16.6465 14.014 16.9347 13.9563 17.2258 13.9563C17.517 13.9563 17.8052 14.014 18.0739 14.1262C18.3425 14.2384 18.5862 14.403 18.7908 14.6101L20.3508 16.1702C20.5579 16.3748 20.7224 16.6183 20.8346 16.887C20.9468 17.1556 21.0046 17.444 21.0046 17.7351C21.0046 18.0263 20.9468 18.3146 20.8346 18.5833C20.7224 18.8519 20.5579 19.0954 20.3508 19.3L19.6408 20.02C19.1516 20.514 18.5189 20.841 17.8329 20.9541C17.1469 21.0672 16.4427 20.9609 15.8208 20.6501C10.4691 17.8952 6.11008 13.5396 3.35083 8.19019C3.03976 7.56761 2.93414 6.86242 3.04914 6.17603C3.16414 5.48963 3.49384 4.85731 3.99085 4.37012L4.70081 3.65015C5.11674 3.23673 5.67937 3.00464 6.26581 3.00464C6.85225 3.00464 7.41488 3.23673 7.83081 3.65015L9.40082 5.22021C9.81424 5.63615 10.0463 6.19871 10.0463 6.78516C10.0463 7.3716 9.81424 7.93416 9.40082 8.3501L8.0708 9.68018C8.95021 10.8697 9.91617 11.9926 10.9608 13.04C11.9994 14.0804 13.116 15.04 14.3008 15.9102L14.3308 15.9402Z">
-                    </path>
-                </svg> 0716 5770460912</li>
+                        height: 0.875rem;">
+                            <path fill-rule="evenodd" stroke="currentColor" stroke-width="1.5" stroke-linejoin="round"
+                                stroke-linecap="round"
+                                d="M14.3308 15.9402L15.6608 14.6101C15.8655 14.403 16.1092 14.2384 16.3778 14.1262C16.6465 14.014 16.9347 13.9563 17.2258 13.9563C17.517 13.9563 17.8052 14.014 18.0739 14.1262C18.3425 14.2384 18.5862 14.403 18.7908 14.6101L20.3508 16.1702C20.5579 16.3748 20.7224 16.6183 20.8346 16.887C20.9468 17.1556 21.0046 17.444 21.0046 17.7351C21.0046 18.0263 20.9468 18.3146 20.8346 18.5833C20.7224 18.8519 20.5579 19.0954 20.3508 19.3L19.6408 20.02C19.1516 20.514 18.5189 20.841 17.8329 20.9541C17.1469 21.0672 16.4427 20.9609 15.8208 20.6501C10.4691 17.8952 6.11008 13.5396 3.35083 8.19019C3.03976 7.56761 2.93414 6.86242 3.04914 6.17603C3.16414 5.48963 3.49384 4.85731 3.99085 4.37012L4.70081 3.65015C5.11674 3.23673 5.67937 3.00464 6.26581 3.00464C6.85225 3.00464 7.41488 3.23673 7.83081 3.65015L9.40082 5.22021C9.81424 5.63615 10.0463 6.19871 10.0463 6.78516C10.0463 7.3716 9.81424 7.93416 9.40082 8.3501L8.0708 9.68018C8.95021 10.8697 9.91617 11.9926 10.9608 13.04C11.9994 14.0804 13.116 15.04 14.3008 15.9102L14.3308 15.9402Z">
+                            </path>
+                        </svg> 0716 5770460912</li>
                     <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="display: inline-block; vertical-align: text-bottom; 
                         width: 0.875rem;
-                        height: 0.875rem;"> <path fill-rule="evenodd"
-                        d="M3.75 5.25L3 6V18L3.75 18.75H20.25L21 18V6L20.25 5.25H3.75ZM4.5 7.6955V17.25H19.5V7.69525L11.9999 14.5136L4.5 7.6955ZM18.3099 6.75H5.68986L11.9999 12.4864L18.3099 6.75Z">
-                    </path>
-                </svg> monika.zylka@gmail.de</li>
+                        height: 0.875rem;">
+                            <path fill-rule="evenodd"
+                                d="M3.75 5.25L3 6V18L3.75 18.75H20.25L21 18V6L20.25 5.25H3.75ZM4.5 7.6955V17.25H19.5V7.69525L11.9999 14.5136L4.5 7.6955ZM18.3099 6.75H5.68986L11.9999 12.4864L18.3099 6.75Z">
+                            </path>
+                        </svg> monika.zylka@gmail.de</li>
                     <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="display: inline-block; 
                         width: 0.875rem;
-                        height: 0.875rem;"> <path
-                        d="M9.74462 21.7446C5.30798 20.7219 2 16.7473 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 16.7473 18.692 20.7219 14.2554 21.7446L12 24L9.74462 21.7446ZM7.01173 18.2567C7.92447 18.986 9.00433 19.5215 10.1939 19.7957L10.7531 19.9246L12 21.1716L13.2469 19.9246L13.8061 19.7957C15.0745 19.5033 16.2183 18.9139 17.1676 18.1091C15.8965 16.8078 14.1225 16 12.1597 16C10.1238 16 8.29083 16.8692 7.01173 18.2567ZM5.61562 16.8214C7.25644 15.0841 9.58146 14 12.1597 14C14.644 14 16.8931 15.0065 18.5216 16.634C19.4563 15.3185 20 13.7141 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 13.7964 4.59708 15.4722 5.61562 16.8214ZM12 13C9.79086 13 8 11.2091 8 9C8 6.79086 9.79086 5 12 5C14.2091 5 16 6.79086 16 9C16 11.2091 14.2091 13 12 13ZM12 11C13.1046 11 14 10.1046 14 9C14 7.89543 13.1046 7 12 7C10.8954 7 10 7.89543 10 9C10 10.1046 10.8954 11 12 11Z">
-                    </path>
-                </svg> 11.11.1991 in Bergstadt, Polen</li>
+                        height: 0.875rem;">
+                            <path
+                                d="M9.74462 21.7446C5.30798 20.7219 2 16.7473 2 12C2 6.47715 6.47715 2 12 2C17.5228 2 22 6.47715 22 12C22 16.7473 18.692 20.7219 14.2554 21.7446L12 24L9.74462 21.7446ZM7.01173 18.2567C7.92447 18.986 9.00433 19.5215 10.1939 19.7957L10.7531 19.9246L12 21.1716L13.2469 19.9246L13.8061 19.7957C15.0745 19.5033 16.2183 18.9139 17.1676 18.1091C15.8965 16.8078 14.1225 16 12.1597 16C10.1238 16 8.29083 16.8692 7.01173 18.2567ZM5.61562 16.8214C7.25644 15.0841 9.58146 14 12.1597 14C14.644 14 16.8931 15.0065 18.5216 16.634C19.4563 15.3185 20 13.7141 20 12C20 7.58172 16.4183 4 12 4C7.58172 4 4 7.58172 4 12C4 13.7964 4.59708 15.4722 5.61562 16.8214ZM12 13C9.79086 13 8 11.2091 8 9C8 6.79086 9.79086 5 12 5C14.2091 5 16 6.79086 16 9C16 11.2091 14.2091 13 12 13ZM12 11C13.1046 11 14 10.1046 14 9C14 7.89543 13.1046 7 12 7C10.8954 7 10 7.89543 10 9C10 10.1046 10.8954 11 12 11Z">
+                            </path>
+                        </svg> 11.11.1991 in Bergstadt, Polen</li>
                 </ul>
             </div>
             <div class="section">
@@ -232,19 +253,22 @@
             </div>
             <div class="section">
                 <h3>Hobbyprojekt Candidfind</h3>
-                <p style="line-height: 1.6">Entwicklung und Leitung einer Plattform zur Verbesserung von Kandidatenvergleichen.</p>
+                <p style="line-height: 1.6">Entwicklung und Leitung einer Plattform zur Verbesserung von
+                    Kandidatenvergleichen.</p>
                 <ul style="line-height: 1.6">
-                    <li>Gewinnerin des Ideenwettbewerbs Koblenz und Empfängerin des EXIST-Women-Stipendiums.</li> 
-                    <li>Erstellung eines datenbasierten Modells zur Erweiterung der Plattformfunktionen.</li> 
-                    <li>Flexibles Arbeiten in vielseitigen Rollen, von Kundenbetreuerin, zur Datenanalyse bis hin zur Prozessmodellierung etc.</li> 
-                    <li>Development mit Unterstützung von ChatGPT</li>    
+                    <li>Gewinnerin des Ideenwettbewerbs Koblenz und Empfängerin des EXIST-Women-Stipendiums.</li>
+                    <li>Erstellung eines datenbasierten Modells zur Erweiterung der Plattformfunktionen.</li>
+                    <li>Flexibles Arbeiten in vielseitigen Rollen, von Kundenbetreuerin, zur Datenanalyse bis hin zur
+                        Prozessmodellierung etc.</li>
+                    <li>Development mit Unterstützung von ChatGPT</li>
                 </ul>
             </div>
         </div>
-       
+
     </div>
     <div class="container">
-        <iframe frameborder="0" style="width:100%;height:1159px;" src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=Personal%20Map.drawio#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D1Rc4wneyAqXcbH6pU9_4T4K2bvI5HBOcQ%26export%3Ddownload"></iframe>
+        <iframe frameborder="0" style="width:100%;height:1159px;"
+            src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=Personal%20Map.drawio#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D1Rc4wneyAqXcbH6pU9_4T4K2bvI5HBOcQ%26export%3Ddownload"></iframe>
     </div>
 </body>
 
