adjusted some links

--- a/index.html
+++ b/index.html
@@ -59,7 +59,6 @@
 
         .sidebar {
             width: 30%;
-            height: 1400px;
             background-color: #f7f7f7;
             /* Light grey color */
             padding: 20px;
@@ -218,7 +217,7 @@
                             <path fill-rule="evenodd"
                                 d="M3.75 5.25L3 6V18L3.75 18.75H20.25L21 18V6L20.25 5.25H3.75ZM4.5 7.6955V17.25H19.5V7.69525L11.9999 14.5136L4.5 7.6955ZM18.3099 6.75H5.68986L11.9999 12.4864L18.3099 6.75Z">
                             </path>
-                        </svg> monika.zylka@gmail.de</li>
+                        </svg> monika.zylka[at]gmail.de</li>
                     <li><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="currentColor" style="display: inline-block; 
                         width: 0.875rem;
                         height: 0.875rem;">
@@ -261,6 +260,17 @@
                     <li>Flexibles Arbeiten in vielseitigen Rollen, von Kundenbetreuerin, zur Datenanalyse bis hin zur
                         Prozessmodellierung etc.</li>
                     <li>Development mit Unterstützung von ChatGPT</li>
+                </ul>
+            </div>
+            <div class="section">
+                <h3>Weiteres</h3>
+                <p style="line-height: 1.6">Entwicklung und Leitung einer Plattform zur Verbesserung von
+                    Kandidatenvergleichen.</p>
+                <ul style="line-height: 1.6">
+                    <li>Alle Rechte vorbehalten</li>
+                    <li><a href="">Impressum und Datenschutz</a></li>
+                    <li><a href="https://www.instagram.com/zy_monki/">Instagram</a></li>
+                    <li><a href="https://de.linkedin.com/in/monika-zylka-796829137">LinkedIn</a></li>
                 </ul>
             </div>
         </div>
