--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
                     Kandidatenvergleichen.</p>
                 <ul style="line-height: 1.6">
                     <li>Alle Rechte vorbehalten</li>
-                    <li><a href="">Impressum und Datenschutz</a></li>
+                    <li><a href="/imprint.html">Impressum und Datenschutz</a></li>
                     <li><a href="https://www.instagram.com/zy_monki/">Instagram</a></li>
                     <li><a href="https://de.linkedin.com/in/monika-zylka-796829137">LinkedIn</a></li>
                 </ul>
