imprint4 with datenschutz

--- a/imprint.html
+++ b/imprint.html
@@ -97,6 +97,23 @@
                 Downloads und Kopien dieser Seite sind nur für den privaten, nicht kommerziellen Gebrauch gestattet.
             </p>
         </section>
+        <section>
+            <h2>Datenschutzerklärung</h2>
+            <p>
+                Der Schutz Ihrer persönlichen Daten ist uns ein besonderes Anliegen. Wir verarbeiten Ihre Daten 
+                daher ausschließlich auf Grundlage der gesetzlichen Bestimmungen (DSGVO, TMG). In diesen 
+                Datenschutzinformationen informieren wir Sie über die wichtigsten Aspekte der Datenverarbeitung 
+                im Rahmen unserer Website.
+            </p>
+            <p>
+                Diese Website verwendet keine Cookies und speichert keine personenbezogenen Daten der 
+                Besucher. Es werden keine Analysedienste oder Tracker eingesetzt.
+            </p>
+            <p>
+                Falls Sie uns per E-Mail kontaktieren, werden Ihre angegebenen Daten zwecks Bearbeitung der 
+                Anfrage bei uns gespeichert. Diese Daten geben wir nicht ohne Ihre Einwilligung weiter.
+            </p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2025 Monika Zylka. Alle Rechte vorbehalten.</p>
