removed iframe because of the cookies

--- a/index.html
+++ b/index.html
@@ -274,10 +274,10 @@
         </div>
 
     </div>
-    <div class="container">
+    <!-- <div class="container">
         <iframe frameborder="0" style="width:100%;height:1159px;"
             src="https://viewer.diagrams.net/?tags=%7B%7D&lightbox=1&highlight=0000ff&edit=_blank&layers=1&nav=1&title=Personal%20Map.drawio#Uhttps%3A%2F%2Fdrive.google.com%2Fuc%3Fid%3D1Rc4wneyAqXcbH6pU9_4T4K2bvI5HBOcQ%26export%3Ddownload"></iframe>
-    </div>
+    </div> -->
 </body>
 
 </html>
